--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,10 +21,13 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile files('C:/Users/micha/AndroidStudioProjects/CARS/lib/commons-lang3-3.5.jar')
+    compile files('C:/Users/micha/AndroidStudioProjects/CARS/lib/commons-lang3-3.5-javadoc.jar')
+    compile files('C:/Users/micha/AndroidStudioProjects/CARS/lib/commons-lang3-3.5-sources.jar')
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
